#add_subdirectory( fc )
#add_subdirectory( schema )
#add_subdirectory( chainbase )
#add_subdirectory( chain )
#add_subdirectory( protocol )
#add_subdirectory( net )
#add_subdirectory( dorothy )
#add_subdirectory( utilities )
#add_subdirectory( app )
#add_subdirectory( plugins )
#add_subdirectory( wallet )
#add_subdirectory( manifest )
#add_subdirectory( builtins )
#add_subdirectory( softfloat )
#add_subdirectory( wasm-jit )
add_subdirectory( abi_generator )
#add_subdirectory( vmapi )
#add_subdirectory( rpc_api_generator )
#add_subdirectory(sql-parser)
#add_subdirectory( gas_estimate )
